objects/HealthCloudGA__EhrVaccinationProtocol__c.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__Authority255__c</fullName>
        <description>Who is responsible for protocol</description>
        <label>Authority 255</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Authority__c</fullName>
        <description>Who is responsible for protocol</description>
        <label>Authority</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Description__c</fullName>
        <description>Details of vaccine protocol</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DoseSequence__c</fullName>
        <description>What dose number within series?</description>
        <label>Dose Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DoseStatusCode__c</fullName>
        <description>Dose Status Symbol in syntax defined by the system</description>
        <label>Dose Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DoseStatusLabel__c</fullName>
        <description>Dose status symbol in friendly terms</description>
        <label>Dose Status Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DoseStatusReasonCode__c</fullName>
        <description>Dose Status Reason Symbol in syntax defined by the system</description>
        <label>Dose Status Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DoseStatusReasonLabel__c</fullName>
        <description>Friendly name for dose status reason</description>
        <label>Dose Status Reason Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DoseStatusReasonSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Dose Status Reason System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DoseStatusSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Dose Status System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DoseTargetCode__c</fullName>
        <description>Dose Target Symbol in syntax defined by the system</description>
        <label>Dose Target Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DoseTargetLabel__c</fullName>
        <description>Dose Target in friendly terms</description>
        <label>Dose Target Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DoseTargetSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Dose Target System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Immunization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Immunization</label>
        <referenceTo>HealthCloudGA__EhrImmunization__c</referenceTo>
        <relationshipLabel>Vaccination Protocols</relationshipLabel>
        <relationshipName>VaccinationProtocols</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsRestricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRestricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsVisibleOnPatientCard__c</fullName>
        <description>If returns true, the record will appear on Patient Card</description>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsVisibleOnPatientCard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SeriesDoses__c</fullName>
        <description>Recommended number of doses for immunity</description>
        <label>Series Doses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Series__c</fullName>
        <description>Name of vaccine series</description>
        <label>Series</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
        <description>When last updated</description>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <defaultValue>&quot;Health1-&quot;+$Organization.Id</defaultValue>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <label>EHR Vaccination Protocol</label>
    <nameField>
        <displayFormat>Prot-{0}</displayFormat>
        <label>EHR Vaccination Protocol ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Vaccination Protocols</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>